Added in Rowi with additional internal temperature sensor

--- a/index.html
+++ b/index.html
@@ -1,22 +1,6 @@
-<html>
-<head>
-<style>
-html, body, #wrapper {
-  height:100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-</style>
-</head>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Co2, tVOC and Temperature</title>
 <body>
-   <div id="wrapper"><img src="ccs811.png" alt="" /></div>
-   <div><a href="css811.csv">CSV</a></div>
-</body>
-</html>
+<img src="ccs811_co2.png"/>
+<img src="ccs811_temp.png"/>
