--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@ img {
 <div class="container-fluid text-center my-5">
   <div class="row">
     <div class="col">
-      <img src="ccs811_co2.png" alt="co2 and tvoc" />
+      <img src="fermmon_co2.png" alt="co2 and tvoc" />
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <img src="ccs811_temp.png" alt="Int. + Ext. Temperature, Humidity and Heat Belt activation" />
+      <img src="fermmon_temp.png" alt="Int. + Ext. Temperature, Humidity and Heat Belt activation" />
     </div>
   </div>
 </div>
