--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ img {
   </div>
 </nav>
 <div class="container my-5">
+  <div class="row">
+    <div class="col fs-2" id="brew" style="font-weight:bold;"></div>
+  </div>
   <div class="row"><div class="col"><hr/></div></div>
   <div class="row">
     <div class="col fs-2"><b>Latest Reading:</b></div>
@@ -104,6 +107,7 @@ function processLatestData(allText) {
   $("#envHumi").html(data[6] + " %");
   $("#co2").html(data[1] + " ppm");
   $("#tVOC").html(data[2] + " ppb");
+  $("#brew").html(data[8]);
 }
 </script>
 </body>
