Added some cache busting JS to the images

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@ $(document).ready(function() {
       processLatestData(data);
     }
   });
+
+  img=document.getElementsByTagName("img");
+  for(i=0; i<img.length; i++) {
+    img[i].src += '?ts='+ new Date().getTime();
+  }
 });
 
 function processLatestData(allText) {
