--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ img {
   margin: auto; 
 } 
 
+#brew {
+  cursor: pointer;
+}
+
 @media screen and (min-width: 480px) {
   img { 
     width: 80%; 
@@ -33,7 +37,7 @@ img {
 </nav>
 <div class="container my-5">
   <div class="row">
-    <div class="col fs-2" id="brew" style="font-weight:bold;"></div>
+    <div class="col fs-2" id="brew" style="font-weight:bold;" data-url=""></div>
   </div>
   <div class="row"><div class="col"><hr/></div></div>
   <div class="row">
@@ -100,6 +104,13 @@ $(document).ready(function() {
   for(i=0; i<img.length; i++) {
     img[i].src += '?ts='+ new Date().getTime();
   }
+
+  $('#brew').click(function(){
+    var url = $(this).data("url");
+    if ( url != '' ) {
+	window.location = $(this).data("url");
+    }
+  });
 });
 
 function processLatestData(allText) {
@@ -113,6 +124,7 @@ function processLatestData(allText) {
   $("#co2").html(data[1] + " ppm");
   $("#tVOC").html(data[2] + " ppb");
   $("#brew").html(data[8]);
+  $("#brew").data('url', data[9]);
 }
 </script>
 </body>
